--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -43,3 +43,5 @@ $font-size-xs: 12px;
 $font-size-sm: 14px;
 $font-size-md: 16px;
 $font-size-lg: 18px;
+
+$sidebar-menu-height-mobile: 70px;
